--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <h1 class="mb-1">Educación Primaria</h1>
                 <h3 class="mb-5"><em>Unidos para hacer de la educación la mejor herramienta para cambiar el mundo</em></h3>
-                <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                <a class="btn btn-primary btn-xl" href="#about">Saber más</a>
             </div>
         </header>
         <!-- About-->
