--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="col-lg-10">
                         <h2>La Educación Primaria comprende seis cursos académicos, desde los 6 a los 12 años, y tiene carácter obligatorio y gratuito.</h2>
                         <p class="lead mb-5">
-                            This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
+                            Esta es la primera etapa obligatoria del sistema educativo por lo que deben incorporarse a ella todas las niñas y los niños en el año natural que cumplan los 6 años
                             <a href="https://unsplash.com/">Unsplash</a>
                             !
                         </p>
