--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             
                             !
                         </p>
-                        <a class="btn btn-dark btn-xl" href="#services">Objetivos</a>
+                        <a class="btn btn-dark btn-xl" href="#NUESTROS">Objetivos</a>
                     </div>
                 </div>
             </div>
