--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                             
                             !
                         </p>
-                        <a class="btn btn-dark btn-xl" href="#NUESTROS">Objetivos</a>
+                        <a class="btn btn-dark btn-xl" href="#educacion">Objetivos</a>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Services-->
+        <!-- NUESTROS-->
         <section class="content-section bg-primary text-white text-center" id="services">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
