--- a/index.html
+++ b/index.html
@@ -65,26 +65,26 @@
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
                         <h4><strong>Finalidad</strong></h4>
-                        <p class="text-faded mb-0">Looks great on any screen size!</p>
+                        <p class="text-faded mb-0">facilitar aprendizajes como la expresión y comprensión oral, la escritura, la lectura, el cálculo, la adquisición de nociones básicas de la cultura, los hábitos de convivencia, estudio y trabajo, el sentido artístico, la creatividad y la afectividad.</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
                         <h4><strong>Formación Integral</strong></h4>
-                        <p class="text-faded mb-0">Freshly redesigned for Bootstrap 5.</p>
+                        <p class="text-faded mb-0">Estas enseñanzas tratan de garantizar al alumnado una formación integral y prepararlo para la Educación Secundaria Obligatoria</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
                         <h4><strong>Metodología</strong></h4>
                         <p class="text-faded mb-0">
-                            Millions of users
+                            La metodología didáctica tiene un carácter personal
                             <i class="fas fa-heart"></i>
-                            Start Bootstrap!
+                            y se adapta a los distintos ritmos de aprendizaje de cada niña o niño.
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
                         <h4><strong>Atención a la diversidad</strong></h4>
-                        <p class="text-faded mb-0">I mustache you a question...</p>
+                        <p class="text-faded mb-0">Se brinda una atención personalizada en función de la necesidades individuales poniendo en marcha medidas de refuerzo ante posibles dificultades de aprendizaje para lograr el éxito escolar.</p>
                     </div>
                 </div>
             </div>
