--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
         <section class="callout">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mx-auto mb-5">
-                    Welcome to
+                    Los maestros imparten todas las materias
                     <em>your</em>
-                    next website!
+                    a excepción de Música, Educación Física y lenguas extranjeras que lo hacen los maestros con la especialización correspondiente.
                 </h2>
                 <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/theme/stylish-portfolio/">Download Now!</a>
             </div>
