--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Stationary</div>
-                                    <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                                    <div class="h2">COMUNICACIÓN</div>
+                                    <p class="mb-0">Tiene como finalidad principal brindar a los estudiantes un manejo eficiente y pertinente de la lengua, para expresarse, comprender , procesar y producir mensajes.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
@@ -123,8 +123,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Ice Cream</div>
-                                    <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                                    <div class="h2">MATEMÁTICA</div>
+                                    <p class="mb-0">Pretende desarrollar la habilidad de usar y relacionar los números, sus operaciones básicas, los símbolos y las formas de expresión y razonamiento matemático, y para resolver problemas de la vida cotidiana.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
@@ -134,8 +134,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Strawberries</div>
-                                    <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                                    <div class="h2">CIENCIA Y TECNOLOGÍA</div>
+                                    <p class="mb-0">El área curricular de Ciencia y Tecnología exige ciudadanos que sean capaces de cuestionarse, buscar información confiable, sistematizarla, analizarla, explicarla y tomar decisiones fundamentadas en conocimientos científicos, y considerando las implicancias sociales y ambientales.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
@@ -145,8 +145,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Workspace</div>
-                                    <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                                    <div class="h2">PERSONAL SOCIAL</div>
+                                    <p class="mb-0">Busca que los niños y las niñas se conozcan a sí mismos y a los demás, a partir de la toma de conciencia de sus características y capacidades personales y de las relaciones que establece, base para la convivencia sana en su medio social.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
