--- a/index.html
+++ b/index.html
@@ -158,9 +158,8 @@
         <!-- Call to Action-->
         <section class="content-section bg-primary text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-                <a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
-                <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
+                <h2 class="mb-4">Al finalizar la Educación Primaria se accede a los estudios de Educación Secundaria Obligatoria (ESO)</h2>
+                
             </div>
         </section>
         <!-- Map-->
