--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                     <p class="mb-0">Pretende desarrollar la habilidad de usar y relacionar los números, sus operaciones básicas, los símbolos y las formas de expresión y razonamiento matemático, y para resolver problemas de la vida cotidiana.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/metodo-ABN-matemáticas.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
