--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                     <p class="mb-0">El área curricular de Ciencia y Tecnología exige ciudadanos que sean capaces de cuestionarse, buscar información confiable, sistematizarla, analizarla, explicarla y tomar decisiones fundamentadas en conocimientos científicos, y considerando las implicancias sociales y ambientales.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/ciencia-tecnologia-balance-educacion-virtual.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -149,7 +149,7 @@
                                     <p class="mb-0">Busca que los niños y las niñas se conozcan a sí mismos y a los demás, a partir de la toma de conciencia de sus características y capacidades personales y de las relaciones que establece, base para la convivencia sana en su medio social.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/solidaridad.jpg" alt="..." />
                         </a>
                     </div>
                 </div>
